# ONREMOTE

./: .gitignore  .gitmodules  CMakeLists.txt  SMTPEmail.lib  qml.qrc
src/: AccountManager.cpp  AccountManager.h  DataManager.cpp  DataManager.h  McuDataManager.cpp  McuDataManager.h  OsInteractionManager.cpp  OsInteractionManager.h  SerialPortManager.cpp  SerialPortManager.h  SmtpManager.cpp  SmtpManager.h  TrayIconManager.cpp  TrayIconManager.h  main.cpp  serialportmanager.cpp  serialportmanager.h
src/firmware/: Beeper.cpp  Beeper.h  BreakInSensors.cpp  BreakInSensors.h  DataManager.cpp  DataManager.h  DustSensors.cpp  DustSensors.h  IButtonManager.cpp  IButtonManager.h  InternalMemoryManager.cpp  InternalMemoryManager.h  Krakeenone_pinout.h  MoistureSensors.cpp  MoistureSensors.h  PcPower.cpp  PcPower.h  PcReset.cpp  PcReset.h  Pin.cpp  Pin.h  PinSingletonInterface.cpp  PinSingletonInterface.h  Pinout.h  PositionVibrationSensors.cpp  PositionVibrationSensors.h  PowerButton.cpp  PowerButton.h  PowerButtonWatcher.cpp  PowerButtonWatcher.h  ResetButton.cpp  ResetButton.h  ResetButtonPin.cpp  ResetButtonPin.h  ResetButtonWatcher.cpp  ResetButtonWatcher.h  SerialPortManager.cpp  SerialPortManager.h  TemperatureSensors.cpp  TemperatureSensors.h  (+4 more)
src/firmware_stm32/: .mxproject  CMakeLists.txt  Makefile  firmware_stm32.gpdsc  firmware_stm32.ioc  firmware_stm32.sln  firmware_stm32.vgdbcmake
src/qml/: ChangePasswordFrame.qml  ControlsFrame.qml  EnterActivationKeyFrame.qml  EnterPasswordFrame.qml  ExPwswFrame.qml  HelpFrame.qml  LicenseAgreementFrame.qml  MainFrame.qml  (+6 more)
(+15 files in other folders)
